Fixed elements to center alignment

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,16 @@
   opacity: 1;
 }
 
+ul{
+  padding: 0;
+
+}
+
+.app-recent-search-li{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 
 /*Button styling*/
@@ -172,16 +182,7 @@
   max-width: 100%;
 }
 
-/* .app-input{
 
-  }
-*/ 
+/*Responsive CSS*/
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*Breakpoints for 
